--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,7 @@ dependencies:
   provider: ^4.0.4
   http: ^0.12.0+4
   flutter_spinkit: "^4.1.2"
-  gradient_app_bar: ^0.1.3
-  
+  google_fonts: ^1.0.0    
 
 
   # The following adds the Cupertino Icons font to your application.
